fixed too large SR Button

--- a/src/app/Components/Home/Home-Components/home/home.component.css
+++ b/src/app/Components/Home/Home-Components/home/home.component.css
@@ -25,9 +25,14 @@
 
 .command-bar {
     width: 100%;
-    height: 64px;
+    height: 70px;
     resize: none;
     overflow: hidden;
+}
+
+.content {
+    height: 100%;
+    width: 100%;
 }
 
 .command-input {
